fix(portal): add mix dynamic work space

--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -10,20 +10,20 @@ tui-dialog {
   border: unset !important;
 }
 
-tui-editor {
-  .t-scrollbar {
-    border-top: unset !important;
-  }
+// tui-editor {
+//   .t-scrollbar {
+//     border-top: unset !important;
+//   }
 
-  .t-tools-wrapper {
-    flex-flow: wrap !important;
-    position: relative !important;
-  }
+//   .t-tools-wrapper {
+//     flex-flow: wrap !important;
+//     position: relative !important;
+//   }
 
-  .t-toolbar-wrapper {
-    position: relative !important;
-  }
-}
+//   .t-toolbar-wrapper {
+//     position: relative !important;
+//   }
+// }
 
 :root {
   --mix-header-height: 47px;
