--- a/libs/mix.share/src/components/creation-dialog/creation-dialog.component.html
+++ b/libs/mix.share/src/components/creation-dialog/creation-dialog.component.html
@@ -39,9 +39,7 @@
       <div class="mix-form__row">
         <label [label]="'Description:'"
                tuiLabel>
-          <tui-editor *ngIf="initialize"
-                      class="editor"
-                      [tuiTextfieldLabelOutside]="true"
+          <tui-editor class="editor"
                       new
                       formControlName="description">
           </tui-editor>
