feat(portal): update portal add table and get post

--- a/apps/mix-portal/src/app/routes/portal/list-post/list-post.component.html
+++ b/apps/mix-portal/src/app/routes/portal/list-post/list-post.component.html
@@ -1,5 +1,18 @@
 <mix-workspace-dynamic-layout>
-  <ng-template header>
-    ABC
-  </ng-template>
+  <div header>
+  </div>
+
+  <div main-workspace>
+    <mix-data-table [fetchDataFn]="fetchPostFn">
+      <div [header]="'Id'"
+           mixTableColumn
+           key="id"></div>
+      <div [header]="'Post Title'"
+           mixTableColumn
+           key="title"></div>
+      <div [header]="'Status'"
+           mixTableColumn
+           key="status"></div>
+    </mix-data-table>
+  </div>
 </mix-workspace-dynamic-layout>
