--- a/libs/mix.share/src/components/data-table/data-table.component.html
+++ b/libs/mix.share/src/components/data-table/data-table.component.html
@@ -35,6 +35,7 @@
           <ng-container *ngFor="let col of columns">
             <ng-container *ngIf="col.sortable === false && col.columnType !== 'CHECKBOX'">
               <th *tuiHead="col.key"
+                  [resizable]="true"
                   [sorter]="null"
                   tuiTh>
                 <ng-container *ngIf="col.tplHeader">
@@ -49,6 +50,7 @@
 
             <ng-container *ngIf="col.sortable === true && col.columnType !== 'CHECKBOX'">
               <th *tuiHead="col.key"
+                  [resizable]="true"
                   tuiTh>
                 <ng-container *ngIf="col.tplHeader">
                   <ng-container *ngTemplateOutlet="col.tplHeader.template"></ng-container>
@@ -114,16 +116,16 @@
         </tr>
       </tbody>
 
-      <!-- <tfoot *ngIf="data">
+      <tfoot *ngIf="data">
         <tr class="mix-data-table__paging">
           <td [colSpan]="columns.length">
             <tui-pagination class="tui-space_top-2"
-                            [length]="getNavigationLength(data.totalCount,data.pageSize)"
+                            [length]="data.pagingData.totalPage || 0"
                             (indexChange)="onPageChange($event)">
             </tui-pagination>
           </td>
         </tr>
-      </tfoot> -->
+      </tfoot>
     </table>
   </tui-loader>
 </div>
