--- a/libs/mix.share/src/components/header-menu/header-menu.component.html
+++ b/libs/mix.share/src/components/header-menu/header-menu.component.html
@@ -12,12 +12,12 @@
   </div>
 
   <div class="header-menu__right-menu">
-    <tui-input class="header-menu__search"
+    <!-- <tui-input class="header-menu__search"
                tuiTextfieldSize="s">
       Search
       <input type="text"
              tuiTextfield>
-    </tui-input>
+    </tui-input> -->
 
     <tui-hosted-dropdown class="header-menu__avatar"
                          [content]="profileTemplate">
