--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -7,6 +7,7 @@
 
     <ng-container *ngFor="let item of menuItems">
       <div class="side-menu__level-1-icon"
+           [ngClass]="{'--active': currentSelectedItem?.id === item?.id}"
            [tuiHint]="tooltip"
            [tuiHintHideDelay]="0"
            [tuiHintMode]="'onDark'"
