--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -40,6 +40,22 @@
           </div>
         </div>
       </ng-container>
+
+      <div class="separator"></div>
+
+      <div class="side-menu__detail-item">
+        <i-tabler></i-tabler>
+        <div>
+          Configuration
+        </div>
+      </div>
+
+      <div class="side-menu__detail-item">
+        <i-tabler></i-tabler>
+        <div>
+          Settings
+        </div>
+      </div>
     </div>
   </div>
 
