--- a/apps/mix-portal/src/app/routes/portal/dashboard/dashboard.component.scss
+++ b/apps/mix-portal/src/app/routes/portal/dashboard/dashboard.component.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-sizing: border-box;
+  padding-top: 30px;
 
   &__hello {
     tui-badge {
