feat(portal): add alt + tab behavior like window, use alt+z

--- a/apps/mix-portal/src/app/routes/portal/portal.layout.html
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.html
@@ -11,3 +11,5 @@
 <ng-template let-observer [(tuiDialog)]="isShowUniversalSearch">
   <mix-universal-search></mix-universal-search>
 </ng-template>
+
+<ng-template let-observer [(tuiDialog)]="isShowTab"><mix-tab-control-dialog></mix-tab-control-dialog></ng-template>
