--- a/apps/mix-portal/src/styles/overwrite.scss
+++ b/apps/mix-portal/src/styles/overwrite.scss
@@ -1,30 +1,182 @@
-thead th:first-child {
-  border-top-left-radius: 10px;
+:root {
+    // Deprecated
+    --mix-heading-font: 'Manrope', @font-fallback;
+    --mix-text-font: 'Manrope', @font-fallback;
+    // Fonts
+    --mix-font-heading: var(--mix-heading-font);
+    --mix-font-heading-1: bold 3.125rem/3.5rem var(--mix-font-heading);
+    --mix-font-heading-2: bold 2.75rem/3rem var(--mix-font-heading);
+    --mix-font-heading-3: bold 2.25rem/2.5rem var(--mix-font-heading);
+    --mix-font-heading-4: bold 1.75rem/2rem var(--mix-font-heading);
+    --mix-font-heading-5: bold 1.5rem/1.75rem var(--mix-font-heading);
+    --mix-font-heading-6: bold 1.25rem/1.5rem var(--mix-font-heading);
+    --mix-font-text: var(--mix-text-font);
+    --mix-font-text-xl: normal 1.1875rem/1.75rem var(--mix-font-text);
+    --mix-font-text-l: normal 1.0625rem/1.5rem var(--mix-font-text);
+    --mix-font-text-m: normal 0.9375rem/1.5rem var(--mix-font-text);
+    --mix-font-text-s: normal 0.8125rem/1.25rem var(--mix-font-text);
+    --mix-font-text-xs: normal 0.6875rem/1rem var(--mix-font-text);
+    // Sizes
+    --mix-radius-xs: 0.25rem;
+    --mix-radius-s: 0.5rem;
+    --mix-radius-m: 0.625rem;
+    --mix-radius-l: 0.625rem;
+    --mix-height-xs: 1.5rem;
+    --mix-height-s: 2rem;
+    --mix-height-m: 2.75rem;
+    --mix-height-l: 3.5rem;
+    // Input padding
+    --mix-padding-s: 0.75rem;
+    --mix-padding-m: 0.75rem;
+    --mix-padding-l: 1rem;
+    // Misc
+    --mix-duration: 0.3s;
+    // Special colors
+    --mix-disabled-opacity: 0.56;
+    --mix-autofill: #fff5c0;
+    // Base colors
+    --mix-base-01: #fff; // background and icons on inverted background
+    --mix-base-02: #f6f6f6; // secondary background, marker icons background
+    --mix-base-03: #ededed; // basic border
+    --mix-base-04: #d7d7d7; // hovered borders
+    --mix-base-05: #b0b0b0; // interface icons
+    --mix-base-06: #959595; // hovered interface icons
+    --mix-base-07: #808080; // inverted background
+    --mix-base-08: #333; // dark interface icons
+    --mix-base-09: #000; // icons on inverted background
+    --mix-primary: #ff0066; // primary buttons, background
+    --mix-primary-hover: #ffdcea; // primary buttons hover
+    --mix-primary-active: #314692; // primary buttons pressed
+    --mix-primary-text: #fff; // text on primary background
+    --mix-secondary: #ebefff; // inputs and secondary buttons
+    --mix-secondary-hover: #dfe3f3; // inputs and secondary buttons hover
+    --mix-secondary-active: #d8ddf2; // inputs and secondary buttons pressed
+    --mix-accent: #ff7043; // fill and outline of accent elements
+    --mix-accent-hover: #ff9a94; // accent elements hover
+    --mix-accent-active: #e7716a; // accent elements pressed
+    --mix-accent-text: #fff; // text on accent background
+    --mix-selection: rgba(112, 182, 246, 0.12); // selected text background
+    --mix-focus: rgba(51, 51, 51, 0.64); // focus ring color
+    --mix-clear: rgba(0, 0, 0, 0.08); // translucent dark fill
+    --mix-clear-disabled: rgba(0, 0, 0, 0.04); // translucent dark fill disabled
+    --mix-clear-hover: rgba(0, 0, 0, 0.16); // translucent dark fill hover
+    --mix-clear-active: rgba(0, 0, 0, 0.2); // translucent dark fill pressed
+    --mix-clear-inverse: rgba(255, 255, 255, 0.16); // translucent light fill
+    --mix-clear-inverse-hover: rgba(255, 255, 255, 0.24); // translucent light fill hover
+    --mix-clear-inverse-active: rgba(255, 255, 255, 0.4); // translucent light fill pressed
+    --mix-elevation-01: #fff; // background of elevated elements
+    --mix-elevation-02: #fff; // background of elevated elements
+    // Statuses
+    --mix-error-fill: rgba(244, 87, 37, 1); // icons and decorative elements with error status
+    --mix-error-bg: rgba(244, 87, 37, 0.12); // translucent error background
+    --mix-error-bg-hover: rgba(244, 87, 37, 0.24); // translucent hover error background
+    --mix-success-fill: rgba(74, 201, 155, 1); // icon and decorative elements with success status
+    --mix-success-bg: rgba(74, 201, 155, 0.12); // translucent success background
+    --mix-success-bg-hover: rgba(74, 201, 155, 0.24); // translucent success hover
+    --mix-warning-fill: rgba(255, 199, 0, 1); // icon and decorative elements with warning status
+    --mix-warning-bg: rgba(255, 199, 0, 0.12); // translucent warning background
+    --mix-warning-bg-hover: rgba(255, 199, 0, 0.24); // translucent warning background
+    --mix-info-fill: rgba(112, 182, 246, 1); // icon and decorative elements with info status
+    --mix-info-bg: rgba(112, 182, 246, 0.12); // translucent info background
+    --mix-info-bg-hover: rgba(112, 182, 246, 0.24); // translucent info background
+    --mix-neutral-fill: rgb(121, 129, 140); // icon and decorative elements with neutral status
+    --mix-neutral-bg: rgba(121, 129, 140, 0.12); // translucent info background
+    --mix-neutral-bg-hover: rgba(121, 129, 140, 0.24); // translucent info background
+    // Text
+    --mix-text-01: rgba(27, 31, 59, 1);
+    --mix-text-02: rgba(27, 31, 59, 0.65);
+    --mix-text-03: rgba(27, 31, 59, 0.4);
+    --mix-link: #526ed3;
+    --mix-link-hover: #6c86e2;
+    --mix-positive: #3aa981;
+    --mix-positive-hover: #7ac5aa;
+    --mix-negative: #dd4c1e;
+    --mix-negative-hover: #e38163;
+    // Modifiers for dark background
+    --mix-error-fill-night: rgba(255, 140, 103, 1);
+    --mix-error-bg-night: rgba(244, 87, 37, 0.32);
+    --mix-error-bg-night-hover: rgba(244, 87, 37, 0.4);
+    --mix-success-fill-night: rgb(74, 201, 155);
+    --mix-success-bg-night: rgba(74, 201, 155, 0.32);
+    --mix-success-bg-night-hover: rgba(74, 201, 155, 0.4);
+    --mix-warning-fill-night: rgb(255, 199, 0);
+    --mix-warning-bg-night: rgba(255, 199, 0, 0.32);
+    --mix-warning-bg-night-hover: rgba(255, 199, 0, 0.4);
+    --mix-info-fill-night: rgb(112, 182, 246);
+    --mix-info-bg-night: rgba(112, 182, 246, 0.32);
+    --mix-info-bg-night-hover: rgba(112, 182, 246, 0.4);
+    --mix-neutral-fill-night: rgb(149, 155, 164);
+    --mix-neutral-bg-night: rgba(149, 155, 164, 0.32);
+    --mix-neutral-bg-night-hover: rgba(149, 155, 164, 0.48);
+    --mix-autofill-night: rgb(85, 74, 42);
+    //
+    --mix-text-01-night: rgba(255, 255, 255, 1);
+    --mix-text-02-night: rgba(255, 255, 255, 0.72);
+    --mix-text-03-night: rgba(255, 255, 255, 0.6);
+    --mix-link-night: #6788ff;
+    --mix-link-night-hover: #526ed3;
+    --mix-positive-night: #44c596;
+    --mix-positive-night-hover: #3aa981;
+    --mix-negative-night: #ff8c67;
+    --mix-negative-night-hover: #bb593a;
+    //
+    --mix-support-01: #a8cef1;
+    --mix-support-02: #3682db;
+    --mix-support-03: #8dda71;
+    --mix-support-04: #34b41f;
+    --mix-support-05: #e29398;
+    --mix-support-06: #b8474e;
+    --mix-support-07: #fcc068;
+    --mix-support-08: #ff8a00;
+    --mix-support-09: #dab3f9;
+    --mix-support-10: #7b439e;
+    --mix-support-11: #fee797;
+    --mix-support-12: #fcbb14;
+    --mix-support-13: #ea97c4;
+    --mix-support-14: #bd65a4;
+    --mix-support-15: #7fd7cc;
+    --mix-support-16: #2fad96;
+    --mix-support-17: #d4aca2;
+    --mix-support-18: #9d6f64;
+    --mix-support-19: #d2e9a2;
+    --mix-support-20: #aadc42;
+    --mix-support-21: #a0c5df;
+    // Deprecated This color does not exist in our palette TODO delete it v3.0
+    --mix-support-22: #3c7ba8;
 }
+
+body {
+    background-color: #f8f9fa;
+}
+
+thead th:first-child {
+    border-top-left-radius: 10px;
+}
+
 thead th:last-child {
-  border-top-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 tui-badge {
-  height: 50px !important;
-  width: 100px;
+    height: 50px !important;
+    width: 100px;
 }
 
 tui-dialog {
-  width: unset !important;
-  border: unset !important;
+    width: unset !important;
+    border: unset !important;
 }
 
 .overlay {
-  height: 100vh;
-  pointer-events: none;
-  touch-action: none;
-  opacity: 0;
-  letter-spacing: normal;
-  transition: unset !important;
-  background: rgba(0, 0, 0, 0.05) !important;
+    height: 100vh;
+    pointer-events: none;
+    touch-action: none;
+    opacity: 0;
+    letter-spacing: normal;
+    transition: unset !important;
+    background: rgba(0, 0, 0, 0.05) !important;
 }
 
 a[tuiLink] {
-  color: var(--tui-base-09);
+    color: var(--mix-base-09);
 }
