feat(portal): refactor list to dynamic

--- a/apps/mix-portal/src/app/routes/portal/list-post/list-post.component.html
+++ b/apps/mix-portal/src/app/routes/portal/list-post/list-post.component.html
@@ -1,28 +1,1 @@
-<mix-workspace-dynamic-layout>
-  <div class="list-post__header"
-       header>
-    <div>{{ postCount }} Posts Available</div>
-    <div class="separator"></div>
-
-    <mix-toolbar [selectedItem]="currentSelectedItems"></mix-toolbar>
-  </div>
-
-  <div main-workspace>
-    <mix-data-table [fetchDataFn]="fetchPostFn"
-                    [searchPlaceholder]="'Type your post name'"
-                    (itemsSelectedChange)="itemSelectedChange($event)">
-      <div [columnType]="'CHECKBOX'"
-           mixTableColumn></div>
-      <div [header]="'#'"
-           [width]="'70px'"
-           mixTableColumn
-           key="id"></div>
-      <div [header]="'Post Title'"
-           mixTableColumn
-           key="title"></div>
-      <div [header]="'Status'"
-           mixTableColumn
-           key="status"></div>
-    </mix-data-table>
-  </div>
-</mix-workspace-dynamic-layout>
+<mix-polymorphous-list [listType]="type"></mix-polymorphous-list>
