--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -44,14 +44,14 @@
       <div class="separator"></div>
 
       <div class="side-menu__detail-item">
-        <i-tabler></i-tabler>
+        <i-tabler name="tools"></i-tabler>
         <div>
           Configuration
         </div>
       </div>
 
       <div class="side-menu__detail-item">
-        <i-tabler></i-tabler>
+        <i-tabler name="settings"></i-tabler>
         <div>
           Settings
         </div>
