--- a/apps/mix-portal/src/app/routes/auth/login/login.component.scss
+++ b/apps/mix-portal/src/app/routes/auth/login/login.component.scss
@@ -1,28 +1,62 @@
 .login-page {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: linear-gradient(to right, #8360c3, #2ebf91);
-
-  .login-form {
-    border-radius: 20px;
-    width: 350px;
-    border: 0.5px solid rgba(0, 0, 0, 0.3);
-    background-color: white;
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 0 2rem;
-    box-sizing: border-box;
-
-    &__submit {
-      margin-top: 2rem;
-
-      > button {
-        width: 100%;
-      }
+    // background-image: linear-gradient(to right, #8360c3, #2ebf91);
+    background: url(../../../../assets/images/backgrounds/curved.jpg);
+    background-size: cover;
+    background-position: 50%;
+    .login-form-logo {
+        width: 200px;
+        height: 50px;
+        margin-bottom: 25px;
+        background-color: var(--tui-primary);
+        -webkit-mask: url(../../../../assets/images/mixcore-logo-red-2.svg) no-repeat 50% 50%;
+        mask: url(../../../../assets/images/mixcore-logo-red-2.svg) no-repeat 50% 50%;
     }
-  }
+    .login-form {
+        border-radius: 20px;
+        width: 350px;
+        // border: 0.5px solid rgba(0, 0, 0, 0.3);
+        // background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 2rem;
+        box-sizing: border-box;
+        &__submit {
+            margin-top: 2rem;
+            >button {
+                width: 100%;
+            }
+        }
+    }
+}
+
+.mask {
+    position: absolute;
+    background-size: cover;
+    background-position: 50%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+}
+
+.blur {
+    box-shadow: inset 0 0 2px #fefefed1;
+    -webkit-backdrop-filter: saturate(200%) blur(30px);
+    backdrop-filter: saturate(200%) blur(30px);
+    background-color: hsla(0, 0%, 100%, 0.8) !important;
+}
+
+.bg-gradient-info {
+    background-image: linear-gradient(310deg, var(--tui-primary), var(--tui-secondary));
+}
+
+.opacity-8 {
+    opacity: 0.8 !important;
 }
