feat(portal): add created date to list

--- a/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
+++ b/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
@@ -20,6 +20,10 @@
       <div [header]="'Title'"
            mixTableColumn
            key="title"></div>
+      <div [header]="'Last Updated'"
+           key="createdDateTime"
+           mixTableColumn>
+      </div>
       <div [header]="'Status'"
            mixTableColumn
            key="status">
